--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ body {
 
 /* error page */
 .w3l-error-spin-content {
-  background: url(../images/bg.jpg) no-repeat center;
+  background: url(images/bg.jpg) no-repeat center;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
